add content to projects, and fix small layout bug

--- a/src/pug/components/footer.pug
+++ b/src/pug/components/footer.pug
@@ -44,11 +44,8 @@ mixin footer(value = {})
             })(target="_blank" rel="noopener" itemprop="email" title="An email you can contact me with.")
       div
         span
-          span Made with
-          span.action-btn-spacer
-          span.style-secondary ❤
-          span.action-btn-spacer
-          span by
+          span Designed by
+          span=" "
           span(itemprop="author")
             +link({
               href: "https://github.com/okikio",
