--- a/src/pug/pages/projects.pug
+++ b/src/pug/pages/projects.pug
@@ -69,7 +69,7 @@ block content
                 title: "Boxer",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
-                  class: "effect-parallax",
+                  class: "",
                   src: "cloudinary/joseph-projects/boxer/03_ADR_Render_04",
                   alt: "An image of a rendered robot."
                 }
@@ -86,7 +86,7 @@ block content
                 title: "Battery Manager",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
-                  class: "effect-parallax",
+                  class: "",
                   src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
                   alt: "An image of the battery testing workstation box.",
                 }
@@ -103,7 +103,7 @@ block content
                 title: "Search and Rescue Robot (SarBot)",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
-                  class: "effect-parallax",
+                  class: "",
                   src: "cloudinary/joseph-projects/sarbot/3D_Modelling",
                   alt: "An image of a 3D model of Sarbot.",
                 }
@@ -120,7 +120,7 @@ block content
                 title: "Ultima Apparel",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
-                  class: "effect-parallax",
+                  class: "",
                   src: "cloudinary/joseph-projects/ultima-apparel/Proof_of_Concept_1",
                   alt: "An image of Ultima Apparels first proof of concept.",
                 }
@@ -137,7 +137,7 @@ block content
                 title: "Phoenix",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
-                  class: "effect-parallax",
+                  class: "",
                   src: "cloudinary/joseph-projects/phoenix/New_Solar_Panel_1-03",
                   alt: "An image of Joseph Ojo holding a large pane of Solar Panels.",
                 }
@@ -154,7 +154,7 @@ block content
                 title: "Publications",
                 class: "layer-box layer-surface layout-block layer-tile-outline",
                 image: {
-                  class: "effect-parallax",
+                  class: "",
                   src: "cloudinary/aerial-photo-of-brown-mountains",
                   alt: "An aerial photo of brown mountains by JOHN TOWNER @heytowner on Unsplash.",
                 }
