--- a/src/pug/pages/projects/boxer.pug
+++ b/src/pug/pages/projects/boxer.pug
@@ -36,11 +36,12 @@ block content
           span.style-font-title.style-letter-head.layout-padding-right-nano.layout-inline-block.layout-left B
           span.layout-inline.layout-margin-dull
             | oxer is an autonomous robotic platform very similar to a conventional vehicle due to its ackerman steering design, and independent suspension. The project initially started as a platform to move material from one building to another, but has since been repurposed as a test platform for all research performed at
+            span=" "
             +link({
               href: "https://www.xianke-lin.com/",
-              content: "a lab"
+              content: "a lab at Ontario Tech University"
             })(target="_blank" rel="noopener" title="A link to the lab where I conducted research on this project.")
-            span at Ontario Tech University.
+            span .
             br
             br
             | At only 46” x 30”, the platform can be both an indoor and outdoor vehicle. It boasts a sensor suite that will enable autonomy in the near future. These include, 4 cameras, one lidar, 8 ultrasonics and an inertial measurement unit (IMU).
@@ -83,7 +84,7 @@ block content
         +tile({
           class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
           image: {
-            class: "effect-parallax",
+            class: "",
             src: "cloudinary/joseph-projects/battery-manager/BatteryTester_Diag",
             alt: "An image of the battery testing workstation box.",
           }
