--- a/src/pug/pages/projects/publications.pug
+++ b/src/pug/pages/projects/publications.pug
@@ -32,6 +32,7 @@ block content
               li O. Ojo, H. Lang, Y. Kim, X. Hu, B. Mu and X. Lin, "A Neural Network-Based Method for Thermal Fault Detection in Lithium-Ion Batteries”, in IEEE Transactions on Industrial Electronics, doi: 10.1109/TIE.2020.2984980
 
               li J. Ojo, X. Lin and H. Lang, "Resonant-Inductive Wireless Power Transfer for Autonomous Mobile Robots", CNKI.com, 2019. [Online]. Available:
+                span=" "
                 +link({
                   href: "http://www.cnki.com.cn/Article/CJFDTOTAL-YQBE201901007.htm",
                   content: "http://www.cnki.com.cn/Article/CJFDTOTAL-YQBE201901007.htm"
@@ -60,7 +61,7 @@ block content
         +tile({
           class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
           image: {
-            class: "effect-parallax",
+            class: "",
             src: "cloudinary/joseph-projects/boxer/03_ADR_Render_04",
             alt: "An image of a rendered robot."
           }
