--- a/src/pug/pages/projects/ultima-apparel.pug
+++ b/src/pug/pages/projects/ultima-apparel.pug
@@ -62,7 +62,7 @@ block content
         +tile({
           class: "layer-box layer-box-flat-mobile layer-tertiary-dark layer-shadow--2 layout-margin-vert-top-larger layout-block layer-tile-outline",
           image: {
-            class: "effect-parallax",
+            class: "",
             src: "cloudinary/joseph-projects/phoenix/New_Solar_Panel_1-03",
             alt: "An image of Joseph Ojo holding a large pane of Solar Panels.",
           }
