--- a/src/scss/components/layer.scss
+++ b/src/scss/components/layer.scss
@@ -192,6 +192,7 @@
             }
 
             @media (min-width: 500px) {
+                line-height: 1.65;
                 font-size: 20px;
             }
 
