--- a/src/pug/components/video.pug
+++ b/src/pug/components/video.pug
@@ -1,4 +1,4 @@
-mixin image(value = {})
+mixin video(value = {})
   -
     let _class = value.class;
     let source = value.src || "cloudinary/city";
@@ -14,7 +14,5 @@ mixin image(value = {})
   .layer-image(class=_class title=alt)
     figure.load-img(itemprop="image" itemscope itemtype="https://schema.org/ImageObject")&attributes(attributes)
       .layer-image-overlay
-      img.placeholder-img(src!=`${urlParse("w_50,e_blur:500")}.jpg` alt=alt loading="lazy")
-      img.core-img(data-src!=`${urlParse()}.webp` alt=alt loading="lazy" itemprop="url")
       noscript
         img.no-script-img(src!=`${urlParse()}.jpg` aria-hidden="true" alt=alt loading="lazy")
