--- a/src/scss/components/base.scss
+++ b/src/scss/components/base.scss
@@ -244,7 +244,7 @@ $headerSizes: (4.2rem, 3.56rem, 2.92rem, 2.28rem, 1.64rem, 1rem);
     }
 }
 
-img {
+img, video {
     object-position: center center;
     object-fit: cover;
     min-height: 200px;
