fix weird bugs on firefox

--- a/src/pug/layout.pug
+++ b/src/pug/layout.pug
@@ -21,6 +21,8 @@ html(lang="en")
     meta(name="viewport", content="width=device-width,initial-scale=1")
     meta(name="color-scheme" content="dark light")
 
+    noscript
+      link(rel="stylesheet" href="/css/no-script.min.css" async)
     link(rel="stylesheet" href="/css/app.min.css" async)
 
     link(rel="manifest", href="/manifest.json")
